--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -16,9 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>6.0</version>
+        	<groupId>org.apache.openejb</groupId>
+        	<artifactId>apache-tomee</artifactId>
+        	<version>1.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
