--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -16,9 +16,9 @@
 
     <dependencies>
         <dependency>
-        	<groupId>org.apache.openejb</groupId>
-        	<artifactId>apache-tomee</artifactId>
-        	<version>1.5.1</version>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-jpa-hibernate4</artifactId>
+            <version>7.1.3.Final</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
