--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -5,13 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.antwerkz.jfokus</groupId>
-        <artifactId>jfokus</artifactId>
+        <groupId>com.antwerkz.mongojpa</groupId>
+        <artifactId>mongojpa</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.antwerkz.jfokus</groupId>
     <artifactId>jpa</artifactId>
 
     <dependencies>
