--- a/mongo/pom.xml
+++ b/mongo/pom.xml
@@ -5,13 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.antwerkz.jfokus</groupId>
-        <artifactId>jfokus</artifactId>
+        <groupId>com.antwerkz.mongojpa</groupId>
+        <artifactId>mongojpa</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.antwerkz.jfokus</groupId>
     <artifactId>mongo</artifactId>
 
     <build>
@@ -36,17 +35,17 @@
         <dependency>
             <groupId>com.google.code.morphia</groupId>
             <artifactId>morphia</artifactId>
-            <version>0.99</version>
+            <version>0.102</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>2.9.1</version>
+            <version>2.11.2</version>
         </dependency>
         <dependency>
             <groupId>org.jongo</groupId>
             <artifactId>jongo</artifactId>
-            <version>0.3</version>
+            <version>0.4</version>
         </dependency>
         <dependency>
             <groupId>com.antwerkz.critter</groupId>
