--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
         <version>7</version>
     </parent>
 
-    <groupId>com.antwerkz.jfokus</groupId>
-    <artifactId>jfokus</artifactId>
+    <groupId>com.antwerkz.mongojpa</groupId>
+    <artifactId>mongojpa</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>jfokus Presentation App</name>
+    <name>Mongo for JPA Devs Presentation App</name>
     <url>https://antwerkz.com</url>
 
     <packaging>pom</packaging>
