--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,15 @@
     <groupId>com.antwerkz.mongojpa</groupId>
     <artifactId>mongojpa</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Mongo for JPA Devs Presentation App</name>
+    <name>Mongo for JPA Devs Presentation</name>
     <url>https://antwerkz.com</url>
 
     <packaging>pom</packaging>
 
     <scm>
-        <connection>scm:git:git@github.com:evanchooly/XXXXXX</connection>
-        <developerConnection>scm:git:git@github.com:evanchooly/XXXXXX</developerConnection>
-        <url>git@github.com:evanchooly/XXXXXX</url>
+        <connection>scm:git:git@github.com:evanchooly/mongo4jpadevs</connection>
+        <developerConnection>scm:git:git@github.com:evanchooly/mongo4jpadevs</developerConnection>
+        <url>git@github.com:evanchooly/mongo4jpadevs</url>
     </scm>
 
     <properties>
@@ -36,6 +36,17 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.12.4</version>
                 </plugin>
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>2.5.1</version>
+                  <inherited>true</inherited>
+                  <configuration>
+                      <source>1.7</source>
+                      <target>1.7</target>
+                      <compilerArgument>-proc:none</compilerArgument>
+                  </configuration>
+              </plugin>
             </plugins>
         </pluginManagement>
         <!-- To use the plugin goals in your POM or parent POM -->
@@ -44,16 +55,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.9</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <inherited>true</inherited>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
