--- a/mongo/pom.xml
+++ b/mongo/pom.xml
@@ -43,14 +43,14 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>com.google.code.morphia</groupId>
+            <groupId>org.mongodb.morphia</groupId>
             <artifactId>morphia</artifactId>
-            <version>0.102</version>
+            <version>0.105</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>2.11.2</version>
+            <version>2.11.3</version>
         </dependency>
         <dependency>
             <groupId>org.jongo</groupId>
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>com.antwerkz.critter</groupId>
             <artifactId>critter</artifactId>
-            <version>1.0</version>
+            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
